ecmascript/parser/tests/test262-error-references/fail/fb130c395c6aafe7.js.stderr
error: A switch block cannot have multiple defaults
 --> $DIR/tests/test262-parser/fail/fb130c395c6aafe7.js:1:23
  |
1 | switch (c) { default: default: }
  |                       ^^^^^^^

